# EmberArmor

./: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml
ember_armor/: __init__.py
ember_armor/api/: __init__.py  auth.py  dependencies.py  main.py  middleware.py
ember_armor/api/routes/: __init__.py  anchor.py  dissonance.py  health.py  metrics.py
ember_armor/core/: __init__.py  circuit_breaker.py  config.py  consensus.py  detector.py  sonar_agent.py
ember_armor/models/: __init__.py  requests.py  responses.py
ember_armor/monitoring/: __init__.py
ember_armor/security/: __init__.py  audit.py  crypto.py  tokens.py
ember_armor/utils/: __init__.py  logging.py
ember_proxy/: .gitignore  README.md  addon.py  install_windows.bat  start.bat  stop.bat
tests/: conftest.py  test_api.py  test_audit.py  test_auth.py  test_circuit_breaker.py  test_consensus.py  test_crypto.py  test_dependencies.py  test_detector.py  test_endpoints.py  test_health_monitor.py  test_rate_limit.py  test_sonar_agent.py  test_tokens.py
