[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ember-armor"
version = "0.2.0"
description = "AI Behavioral Safety Infrastructure"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "bandit[toml]>=1.7.0",
]

[tool.ruff]
target-version = "py311"
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "ASYNC", "S"]
ignore = ["S101"]  # Allow assert in tests

[tool.ruff.per-file-ignores]
"tests/*" = ["S"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/ember_armor"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false

[tool.bandit]
targets = ["ember_armor"]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # assert_used — allowed in production guards
recursive = true
